# jewels

./: Makefile.in  README  aclocal.m4  configure  configure.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  animator.cc  animator.h  animator_test.lua  animatorfactory.cc  animatorfactory.h  board.cc  board.h  camera.cc  camera.h  color.h  cubicjewel.cc  cubicjewel.h  game.cc  game.h  jewels.cc  light.cc  light.h  lua_test.cc  luahelper.h  material.cc  material.h  materialfactory.cc  materialfactory.h  materials.h  point.cc  point.h  pyanimator.cc  pyanimator.h  pyscreenobject.cc  pyscreenobject.h  python_helper.h  python_test.cc  python_test.py  screenobject.cc  screenobject.h  stockanimators.cc  stockanimators.h  wobblycube.cc  (+1 more)
