AC_INIT(src/jewels.cc)
AM_INIT_AUTOMAKE(jewels,1.0)

AM_MAINTAINER_MODE

AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_LANG_CPLUSPLUS

CXXFLAGS="-O0 -g3"

AC_CHECK_LIB(stdc++, main,,AC_MSG_ERROR(jewels requires libstdc++))

LIBS="-lGL -lGLU -lm "

PKG_CHECK_MODULES(SDL, [
        sdl
])

PKG_CHECK_MODULES(lua, [
        lua5.1
])

PKG_CHECK_MODULES(luabind, [
        luabind
])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
